swim_form/src/tests/derive/attributes/invalid_biguint_attr.stderr
error[E0308]: mismatched types
  --> $DIR/invalid_biguint_attr.rs:18:1
   |
18 | #[form(Value)]
   | ^^^^^^^^^^^^^^ expected `i32`, found struct `num_bigint::biguint::BigUint`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/invalid_biguint_attr.rs:18:1
   |
18 | #[form(Value)]
   | ^^^^^^^^^^^^^^ expected `i32`, found struct `num_bigint::biguint::BigUint`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/invalid_biguint_attr.rs:18:1
   |
18 | #[form(Value)]
   | ^^^^^^^^^^^^^^ expected struct `num_bigint::biguint::BigUint`, found `i32`
   |
   = note: expected reference `&num_bigint::biguint::BigUint`
              found reference `&'__a i32`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
